# PuzzleTunnelDiscovery

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.BSD3  README.md
assets/: SimpleSofa.mazeconf  Sofa.m  Sofa.mazeconf  cube.1.edge  cube.1.ele  cube.1.face  cube.1.mat  cube.1.node  cube.1.smesh  cube.2.edge  cube.2.ele  cube.2.face  cube.2.node  cube.2.v.cell  cube.2.v.edge  cube.2.v.face  cube.2.v.node  cube.ply  diamond.1.edge  diamond.1.ele  diamond.1.face  diamond.1.node  diamond.1.smesh  diamond.ply  diamond2.ply  involute-stick.part.mazeconf  involute.mazeconf  m.ele  m.node  mazeconf  sphere.ply
cmake/: FindSUITESPARSE.cmake  bundles.cmake  extra_directories.cmake  extra_functions.cmake  extra_packages.cmake  gpu_apps.cmake  libosr.cmake  pybinds.cmake  sanchecks.cmake  symlinks.cmake
doc/: Makefile  bs-pipelines.md  choose-a-planner.md  direction-survey.md  formula.tex  hist_csv.py  interop-with-ompl.md  never-interpolate-in-non-ompl-c-space.md  p2d_csv.py  pdsrdt-g9mescreened-4m.csv  scalable-rdt-forest-performance.md  workflow.md
doc/clearance-bound/: .gitignore  Makefile  acmsiggraph.cls  bound.tex  template.bib  template.tex
lib/RectangleBinPack/: MaxRectsBinPackReal.h
lib/advplyio/: ply_write_vfc.cc  ply_write_vfc.h
lib/ccdxx/: EigenCCD.cc  EigenCCD.h
lib/erocol/: hs.cc  hs.h
lib/fat/: fat.cc  fat.h
lib/geopick/: pick2d.cc  pick2d.h
lib/goct/: gbuilder.h  goctree.h  nullvisualizer.cc  nullvisualizer.h
lib/heatio/: readheat.cc  readheat.h
lib/mazeinfo/: 2d.cc  2d.h
lib/meshbool/: join.cc  join.h
lib/numerical/: stability.h
lib/omplaux/: bounding_sphere.cc  bounding_sphere.h  bvh_helper.h  clearance.h  clearance1.h  clearance2.h  convex.cc  convex.h  geo.cc  geo.h  map.cc  map.h  path.h  scene_bounding_box.cc  scene_bounding_box.h
lib/osr/: bbox.h  camera.cc  camera.h  cdmodel.cc  cdmodel.h  geometry.h  gtgenerator.cc  gtgenerator.h  mesh.cc  mesh.h  mesh_renderer.cc  mesh_renderer.h  node.cc  node.h  ode_data.cc  ode_data.h  osr_init.cc  osr_init.h  osr_render.cc  osr_render.h  osr_rt_texture.cc  osr_rt_texture.h  osr_state.cc  osr_state.h  osr_util.cc  osr_util.h  pngimage.cc  pngimage.h  quickgl.cc  quickgl.h  scene.cc  scene.h  scene_renderer.cc  scene_renderer.h  uniform.h  unit_world.cc  unit_world.h
lib/pycutec2/: cutec2.cc  mesh2d.cc  mesh_io.cc  module.cc  pycutec2.cc  pycutec2.h
lib/pygeokey/: module.cc
lib/pyosr/: module.cc
lib/pyse3ompl/: config_planner.cc  config_planner.h  ompldriver.cc  ompldriver.h  pyse3ompl.cc
lib/pyvistexture/: pyvistexture.cc  texture_viewer.cc  texture_viewer.h
lib/rectpack/: FreeRectangleManager.cc  FreeRectangleManager.h  MaxRectsBinPackReal.cc  MaxRectsBinPackReal.h  RectReal.cc  RectReal.h
lib/renderer/: camera.cc  camera.h  camera_config.h  gui.cc  gui.h  image.h  material.h  quickgl.cc  quickgl.h  render_pass.cc  render_pass.h
lib/strman/: suffix.h
lib/tetio/: readtet.cc  readtet.h  readvoronoi.cc  readvoronoi.h  writetet.cc  writetet.h
lib/tetread/: read.hpp  readtet.cc  readtet.h  readvoronoi.cc  readvoronoi.h
lib/tritri/: Moller97.cc  Moller97d.cc  tritri.cc  tritri.h  tritri_cop.h  tritri_cop.hh  tritri_igl.h  tritri_igl.hh
lib/vecio/: arrayvecio.cc  arrayvecio.h  matio.h  vecin.cc  vecin.h  vecout.cc  vecout.h
lib/vertcolorply/: ply_write_vfc.cc  write_ply_vc.cc  write_ply_vc.h
res/: .gitignore
res/alpha/: alpha-1.2.org.path  alpha-1.2.org.tunnel-more.npz  alpha-1.2.org.tunnel.npz  alpha-1.2.org.w-first.npz  alpha-1.2.org.w-first.path  alpha-1.2.wt.1.edge  alpha-1.2.wt.1.ele  alpha-1.2.wt.1.face  alpha-1.2.wt.1.node  alpha-1.2.wt.1.smesh  alpha-1.2.wt.ply  alpha-1.2.wt.tcp.ply  alpha.env  alpha.query  alpha_env-1.2.wt.1.edge  alpha_env-1.2.wt.1.ele  alpha_env-1.2.wt.1.face  alpha_env-1.2.wt.1.node  alpha_env-1.2.wt.1.smesh  alpha_env-1.2.wt.ply  double-alpha-1.2.blend  double-alpha-1.2.wt.tcp.ply  env-1.1.ply  robot.ply  ver1.2.path
res/dual/: dual-g9.cfg  dual.dt.tcp.obj.mtl  dual_tiny.gt.npz  dual_tiny.path  dual_tiny.tunnel-manual.npz  dual_tiny.w-first.npz  g9.ompl.path  g9.unit.path
res/elk/: Puzzle-CounterPart-Possion(12,8,4,1.05).ply  Puzzle-CounterPart-Possion.ply  Puzzle-CounterPart-Sample60k.ply  Puzzle-CounterPart-v1.3.ply  Puzzle-CounterPart-v1.4.ply  Puzzle-CounterPart-v1.5.ply  Puzzle-CounterPart-v1.75.ply  Puzzle-CounterPart.mlp  Puzzle-Part-Possion(12,8,4,1.05).ply  Puzzle-Part-Possion.ply  Puzzle-Part-Sample60k.ply  Puzzle-Part-v1.4.ply  Puzzle-Part-v1.5.ply  Puzzle-Part-v1.75.ply  Puzzle-Path-v1.5-BFMT.txt  Puzzle-Path-v1.5-PRM.txt  Puzzle-Path-v1.5-RRTConnect.txt  Puzzle-Path-v1.75-RRTConnect.txt  Puzzle-v1.4.cfg  Puzzle-v1.5.cfg  Puzzle-v1.75.cfg
res/fake3d/: deadend-1.maze  deadend-2.maze  deadend-3.maze  deadend.maze
res/simple/: ElkMeetsCube.blend  boxreference.path  naive.path  naive2.path  naiveelk.path
samples/: Makefile.build  Makefile.mkobs
samples/RL/: dir1-higher-res-0.sh  dir1-higher-res-1.sh  dir2-avi-0.sh  dir2-avi-1.sh  dir3-larger-amag.sh  dir4-more-iterations-0.sh  dir4-more-iterations-1.sh  dir5-resnet.sh  dir6-gradb.sh  dirs-0.sh  dirs-1.sh  eva-ch0.sh  eva-ch1.sh  eva.sh  gen.sh  iceva.sh  jobs.sh  misp.sh  todo-a12-r5-relu.sh  todo-a12-r5.sh  todo-a4.sh  todo-all.sh  todo-cmt.sh  todo-e4.sh  todo-efn.sh  todo-evgg.sh  todo-fn.sh  todo-idmv.sh  todo-vgg-a4.sh  todo.sh
sancheck/ccd/: EigenCCD.cc  EigenCCD.h  main.cc
sancheck/fatten/: main.cc  sancheck.cc
sancheck/fclcontacts/: main.cc
sancheck/laplacian/: main.cc
scripts/: aa-gt.sh  aa-train.sh  aagt.condor  aapath-walker.sh  all-in-one.sh  calibrate-distance.sh  cat-eval.sh  corridor.sh  corridor2d.sh  curiosty-rl.sh  datan.sh  di-run.sh  etr-run.sh  func.sh  ldi-run.sh  mtdriver-run.sh  octogui.sh  osr_test.py  path-walker.sh  path2wfirst.py  pretrain-d.sh  pretrain.sh  puzzlegui.sh  reanimator.sh  rl-precalcmap.sh  rl-reanimator.sh  rl-run.sh  rl-verifymap.sh  saforce.condor  sancheck_objautouv-1.sh  ta3c-run.sh  tcat-run.sh  test_collide-run.sh  ttr-run.sh  ttrmt-run.sh  ut-icm.sh  vbmatrix.condor
tex/: bound.tex  template.tex
(+403 files in other folders)
